[gd_scene load_steps=6 format=3 uid="uid://cj7pifxnlmwbh"]

[ext_resource type="Script" path="res://SetPieces/Platform/pipe_up.gd" id="1_sd37r"]
[ext_resource type="Texture2D" uid="uid://ch08wei0ssrcy" path="res://Assets/Art/Orange Pipe.png" id="2_ltdk7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78010"]
size = Vector2(18, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arayy"]
size = Vector2(24, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1uqvy"]
size = Vector2(22, 2)

[node name="Pipe_up" type="StaticBody2D"]
rotation = 3.14159
script = ExtResource("1_sd37r")
metadata/_edit_horizontal_guides_ = [-36.0]

[node name="OrangePipe" type="Sprite2D" parent="."]
texture = ExtResource("2_ltdk7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_78010")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_arayy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_1uqvy")

[node name="Location_pos" type="Marker2D" parent="."]
z_index = -1
position = Vector2(0, -36)

[node name="InThePipeTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="OuThePipeTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="InThePipeTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="OuThePipeTimer" to="." method="_on_ou_the_pipe_timer_timeout"]
